--- a/main.html
+++ b/main.html
@@ -10,6 +10,63 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonial Section</title>
+    <style>
+        /* Main Container */
+        #testimonials-container {
+            padding: 20px;
+            background-color: #f9f9f9;
+            max-width: 600px;
+            margin: auto;
+        }
+
+        /* Individual Testimonial */
+        .testimonial {
+            padding: 15px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+
+        /* Testimonial text */
+        .testimonial p {
+            margin: 0 0 10px;
+            font-size: 16px;
+            color: #333;
+        }
+
+        /* Author's name */
+        .testimonial .author {
+            text-align: right;
+            font-style: italic;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <div id="testimonials-container">
+        <div class="testimonial">
+            <p>This product exceeded my expectations. I am extremely satisfied with the results.</p>
+            <div class="author">- John Doe</div>
+        </div>
+        <div class="testimonial">
+            <p>The customer service was fantastic. I would highly recommend this to others!</p>
+            <div class="author">- Jane Smith</div>
+        </div>
+        <!-- <div class="testimonial">
+            <p>Very happy with the purchase. Will definitely come back for more.</p>
+            <div class="author">- Alex Johnson</div>
+        </div> -->
+    </div>
+</body>
+</html>
+
 
 </body>
 
