--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@
 </head>
 <body>
     <div id="testimonials-container">
+		<h1>Testimonials</h1>
         <div class="testimonial">
             <p>This product exceeded my expectations. I am extremely satisfied with the results.</p>
             <div class="author">- John Doe</div>
