--- a/main.html
+++ b/main.html
@@ -54,11 +54,11 @@
 		<h1>Testimonials</h1>
         <div class="testimonial">
             <p>This product exceeded my expectations. I am extremely satisfied with the results.</p>
-            <div class="author">- John Doe</div>
+            <p class="author">- John Doe</p>
         </div>
         <div class="testimonial">
             <p>The customer service was fantastic. I would highly recommend this to others!</p>
-            <div class="author">- Jane Smith</div>
+            <p class="author">- Jane Smith</p>
         </div>
         <!-- <div class="testimonial">
             <p>Very happy with the purchase. Will definitely come back for more.</p>
